# wind_tower_inspection

./: .gitattributes  .gitignore  CRITICAL_FIXES_v8.txt  README.md  dataset.py  debug_encoder_magnitude.py  detailed_validation.py  requirements.txt  setup_v7.sh  test.py  test_v7_no_nan.py  train.py  train_ae_tscm_colab_v6.ipynb  train_ae_tscm_v7_fixed.py  train_ae_tscm_v8_paper_exact.py  validate_for_defect_detection.py
dataset/dataset/MT001/: MT001_038_ALL.jpg:Zone.Identifier  metadata.csv
gri_env/: main.py  pyproject.toml
models/: __init__.py  ae_tscm.py  vqvae.py
runs/ae_tscm_v8_20260128_122328/: best_model.pt  final_model.pt
runs/ae_tscm_v8_20260128_122328/checkpoints/: ckpt_epoch_0025.pt  ckpt_epoch_0050.pt  ckpt_epoch_0075.pt  ckpt_epoch_0100.pt  ckpt_epoch_0125.pt  ckpt_epoch_0150.pt
